# cuda_mpi_autotools_proj_template

./: .gitignore  Makefile.am  README.md  configure.ac
am/: cuda.am
m4/: ax_cuda.m4
src/: Makefile.am  kernel.cu  testHelloMpiCuda.cu
